--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-certifi==2017.7.27.1
-chardet==3.0.4
+Django==1.11.4
+django-prometheus
+djangorestframework
 gtfs-realtime-bindings==0.0.5
-idna==2.5
+gunicorn==19.6.0
 protobuf==3.3.0
+psycopg2
 pytz==2017.2
 requests==2.18.3
-six==1.10.0
-urllib3==1.22
