--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Django==1.11.4
-django-prometheus
-djangorestframework
+djangorestframework=3.6.3
+dj-database-url==0.4.2
 gtfs-realtime-bindings==0.0.5
 gunicorn==19.6.0
 protobuf==3.3.0
-psycopg2
+psycopg2=2.7.3
 pytz==2017.2
 requests==2.18.3
+whitenoise==3.3.0
