--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,16 @@
     "devserver": "webpack-dev-server --config webpack.dev.config.js"
   },
   "dependencies": {
+    "history": "^4.7.2",
+    "immutable": "^3.8.2",
     "package.json": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.6"
   },
   "devDependencies": {
