--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,12 @@
     "devserver": "webpack-dev-server --config webpack.dev.config.js"
   },
   "dependencies": {
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.1",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
+    "less": "^3.0.0-alpha.3",
+    "less-loader": "^4.0.5",
     "package.json": "^2.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -19,7 +23,8 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "redux-saga": "^0.15.6"
+    "redux-saga": "^0.15.6",
+    "style-loader": "^0.19.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
