Make the dev server accept any path.

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack-dev": "webpack --config webpack.dev.config.js",
     "webpack-prod": "webpack --config webpack.prod.config.js",
-    "devserver": "webpack-dev-server --config webpack.dev.config.js"
+    "devserver": "webpack-dev-server --config webpack.dev.config.js --history-api-fallback"
   },
   "dependencies": {
     "css-loader": "^0.28.7",
