--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
     "redux-saga": "^0.15.6",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
